update dx12 logic

--- a/miniOgre/CMakeLists.txt
+++ b/miniOgre/CMakeLists.txt
@@ -46,11 +46,11 @@ add_subdir(parser)
 add_subdir(particle)
 add_subdir(particle/ParticleFX)
 add_subdir(render)
-add_subdir(render/dx11Render)
+#add_subdir(render/dx11Render)
 add_subdir(render/dx12Render)
 add_subdir(render/vulkanRender)
 add_subdir(wow)
-add_subdir(fg)
+#add_subdir(fg)
 add_subdir(filament)
 
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/animation)
@@ -61,14 +61,14 @@ list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/parser)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/particle)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/particle/ParticleFX)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/render)
-list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/render/dx11Render)
+#list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/render/dx11Render)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/render/dx12Render)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/render/vulkanRender)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/wow)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/base)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/Utilities)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/filament)
-list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/fg)
+#list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR}/fg)
 list(APPEND MINIOGRE_INC ${CMAKE_CURRENT_SOURCE_DIR})
 list(APPEND MINIOGRE_INC ${ROOT_INC}/3rdSource/math/include)
 
