add VoxelConeTracing logic

--- a/miniOgre/CMakeLists.txt
+++ b/miniOgre/CMakeLists.txt
@@ -88,6 +88,7 @@ target_include_directories(${MINIOGRE_LIB_NAME}
 	${ROOT_INC}/3rd/bullet3/include
 	${ROOT_INC}/3rd/ffmpeg/include
 	${ROOT_INC}/3rd/stormlib
+	${ROOT_INC}/3rd/Assimp/include
 	${ROOT_INC}/3rd/DirectXShaderCompiler/inc
 	${ROOT_INC}/3rd/winpixeventruntime/include
 	${ROOT_INC}/3rdSource/utils/include
@@ -108,6 +109,7 @@ dxgi
 dxguid
 d3d12
 d3d11
+assimp-vc140-mt
 WinPixEventRuntime
 D3DCompiler
 dxcompiler)
