change sdfgi logic

--- a/Application/SDFGI/CMakeLists.txt
+++ b/Application/SDFGI/CMakeLists.txt
@@ -5,17 +5,19 @@ project(SDFGI)
 
 if (WIN32)
 add_definitions(-DNOMINMAX)
+add_definitions(-DNOMINMAX)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 add_definitions(-D__WINDOWS__)
+add_definitions(-DCEGUI_STATIC)
 endif()
 
 
 macro(add_subdir)
     set(SUBDIR_SRC_LIST)
     foreach(DIR ${ARGV})
-        list(APPEND GAMECLIENT_INC ${CMAKE_CURRENT_SOURCE_DIR}/${DIR})
+        list(APPEND SDFGI_INC ${CMAKE_CURRENT_SOURCE_DIR}/${DIR})
 
-        list(APPEND GAMECLIENT_INC_SUBDIR ${DIR})
+        list(APPEND SDFGI_INC_SUBDIR ${DIR})
 
         file(GLOB SRC_FILES 
             ${CMAKE_CURRENT_SOURCE_DIR}/${DIR}/*.cpp 
@@ -30,7 +32,7 @@ macro(add_subdir)
 
     source_group(${ARGV0} FILES ${SUBDIR_SRC_LIST})
 
-    list(APPEND GAMECLIENT_SRC_LIST ${SUBDIR_SRC_LIST})
+    list(APPEND SDFGI_SRC_LIST ${SUBDIR_SRC_LIST})
 
     unset(SUBDIR_SRC_LIST)
     unset(SRC_FILES)
@@ -44,7 +46,7 @@ add_subdir(../common)
 
 
 
-add_executable(${PROJECT_NAME} ${GAMECLIENT_SRC_LIST})
+add_executable(${PROJECT_NAME} ${SDFGI_SRC_LIST})
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${ROOT_INC}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ROOT_INC}/bin)
@@ -53,31 +55,25 @@ set_target_properties(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY $
 target_include_directories(${PROJECT_NAME}
     PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GAMECLIENT_INC}
-	${GAMEUTIL_INC}
-	${GAMESHARE_INC}
-	${MIDDLE_INC}
-	${MINIOGRE_INC}
-	${MYGUI_INC}
-	${ROOT_INC}/3rd/OIS/include
+    ${SDFGI_INC}
+    ${MINIOGRE_INC}
+    ${ROOT_INC}/3rd/OIS/include
+    ${ROOT_INC}/3rdSource/utils/include
 )
 
 target_link_directories(${PROJECT_NAME}  PRIVATE ${ROOT_INC}/3rd/lib)
 
-target_link_libraries(${PROJECT_NAME} GameUtil GlslUtil miniOgre 
-CEGUI expat Middle stormlib OIS freetype GameShare dy_network LinearMath BulletCollision BulletDynamics BulletSoftBody
+target_link_libraries(${PROJECT_NAME}
+GameUtil
+miniOgre 
+CEGUI 
+expat  
+stormlib 
+OIS 
+freetype 
+dy_network 
 tinyxmld
 pcre
-bluevk
-utils
-avcodec
-avdevice
-avfilter
-avformat
-avutil
-postproc
-swresample
-swscale
 dxgi
 dxguid
 d3d12
